<resources>
    <string name="app_name">Doodhwala</string>
    <string name="web_client_id">121430678540-8kuq1o66dpt46nhv181ltpporp1q7p75.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1337340613539030</string>
    <string name="fb_login_protocol_scheme">fb1337340613539030</string>
    <string name="facebook_client_token">1337340613539030|qEKViHexgGJguRur7IY7a9F6Qdo</string>
    <string name="username">Enter user name</string>
    <string name="password">Enter password</string>
    <string name="loginbtn">Login</string>
    <string name="alreadyhaveanaccount">Already have an account?</string>
    <string name="signwithgoogle">Signin with Google</string>
    <string name="signwithfacebook">Signin with Facebook</string>
    <string name="name">Enter User name</string>
    <string name="email">Enter User Email</string>
    <string name="userpassword">Enter User Password</string>
    <string name="phoneno">Enter User Phone no</string>
    <string name="Address">Enter User Address</string>
    <string name="pincode">Enter User Pin Code</string>
    <string name="signup">Sign up</string>
    <string name="toystore">ToyStore</string>
    <string name="petstore">Pet Store</string>
    <string name="beautystore">Beauty Store</string>
    <string name="electronicstore">Electronic Store</string>
    <string name="healthstore">Health Store</string>
    <string name="stationarystore">Stationary Store</string>
    <string name="Bookstore">Book Store</string>
    <string name="giftstore">Gift Store</string>
    <string name="heading">DOODHWALA</string>
    <string name="categories">Shop by category</string>
    <string name="Dairy">Dairy</string>
    <string name="Bakery">Bakery</string>
    <string name="Breakfast">Breakfast</string>
    <string name="Fruits">Fruits</string>
    <string name="Vegetables">Vegetables</string>
    <string name="Grocery">Grocery</string>
    <string name="Dryfruits">Dry Fruits</string>
    <string name="personalcare">Personal Care</string>
    <string name="pharmaandwellness">Pharma and Wellness</string>
    <string name="Cleaningessentials">Cleaning Essentials</string>
    <string name="attarice">Atta,Rice and Dal</string>
    <string name="babycare">Baby Care</string>
    <string name="saucesandspreads">Sauces &amp; Spreads</string>
    <string name="organicandpremisum">Organic</string>
    <string name="attariceanddaal">Atta, Rice &amp; Dal</string>
    <string name="colddrinksandjuices">Drinks &amp; Juices</string>
    <string name="bakreyandbiscuits">Bakery &amp; Biscuits</string>
    <string name="shopbystore">Shop by Store</string>
    <string name="brandspotlight">Brand Spotlight</string>
    <string name="allcategories">All Categories</string>
    <string name="hapur">Hapur</string>
    <string name="rsfifty">Rs. 50/kg</string>
    <string name="rsfourty">Rs. 40/kg</string>
    <string name="rsonetwenty">Rs. 120/kg</string>
    <string name="rsonefifty">Rs. 150/kg</string>
    <string name="rsthirty">Rs. 30</string>
    <string name="rsseventytwo">Rs. 72</string>
    <string name="rsseventyfive">Rs. 75</string>
    <string name="rsthirtytwo">Rs. 32</string>
    <string name="rstwenty">Rs. 20</string>
    <string name="sixhundred">600g</string>
    <string name="fivehundred">500g</string>
    <string name="Spongegourd">Sponge Gourd (Tori)</string>
    <string name="zero">0</string>
    <string name="cauliflower">Cauliflower-Medium (phool Gobhi)</string>
    <string name="gettingharvested">Getting harvested:10-11am Today</string>
    <string name="greenpeas">Green Peas (Matar)</string>
    <string name="punjab">Punjab</string>
    <string name="nashik">Nashik</string>
    <string name="Onion">Onion (Pyaaz)</string>
    <string name="profile">Profile</string>
    <string name="myaccount">My Account</string>
    <string name="number">7007221530</string>
    <string name="wallet">Wallet</string>
    <string name="supports">Supports</string>
    <string name="payments">Payments</string>
    <string name="yourinformation">YOUR INFROMATION</string>
    <string name="yourorders">Your orders</string>
    <string name="Addressbook">Address Book</string>
    <string name="otherinfromation">Other Infromation</string>
    <string name="sharetheapp">Share the app</string>
    <string name="aboutus">About Us</string>
    <string name="logout">Log out</string>
    <string name="getfeedingindia">Get Feeding India receipt</string>
    <string name="rateusontheplaystore">Rate us on the Play Store</string>
    <string name="notificationprefrences">Notification Prefrences</string>
    <string name="drunkstonedorstupidpartygaheading">Drunk Stoned or\nStupid Party Ga...</string>
    <string name="drunkstonedorstupidpartygaquantity">1 pack</string>
    <string name="talkflirtdare3infundrinkingheading">Talk, Flirt,Dare 3\nin 1 fun Drinking...</string>
    <string name="talkflirtdare3infundrinkingquantity">1 set</string>
    <string name="whatdoyoumemepartyheading">What do you\nmeme party Car...</string>
    <string name="whatdoyoumemepartyquntity">1 pack</string>
    <string name="nonsense4">Nonsense 4\n</string>
    <string name="nonsense4quantity">1 set</string>
    <string name="shopbyintrest">Shop by Inetrest</string>
    <string name="cardgames">Card Games</string>
    <string name="boardgames">Board Games</string>
    <string name="scienceproject">Science Kits</string>
    <string name="puzzzles">Puzzles</string>
    <string name="lightingtoy">Lighting Toy</string>
    <string name="learningtools">Learning Tools</string>
    <string name="partygamesforadult">Party Games for adults</string>
    <string name="toysandgames">Toys &amp; Games\nStore</string>
    <string name="store">Store</string>
    <string name="endlessfunwithawidevarietyof">Endless fun with a wide variety of\ntoys &amp; games fro kids</string>
    <string name="toysandgamsfrokids">toys &amp; games for kids"</string>
    <string name="learningandeducation">Learning Education</string>
    <string name="Cardpuzzlesandboardgames">Card Games</string>
    <string name="actiontoysNDTOYVEHICcles">Action game</string>
    <string name="artandcraftkits">Art &amp; Craft Kits</string>
    <string name="dollsandplaysets">Dolls &amp; Play Sets</string>
    <string name="Toddlersandbabytoys">Toddlers &amp; Baby Toys</string>
    <string name="add">Add</string>
    <string name="wiseandotherwiseheading">Wise And\nOtherwise</string>
    <string name="wiseandotherwise">192</string>
    <string name="wiseotherwisereal"> <strike>250</strike></string>
    <string name="Rs">\u20B9</string>
    <string name="sudhamurthy">Sudha Murty</string>
    <string name="howtheearthgotitsbeautyy">How The Earth\nGot Its Beauty</string>
    <string name="howtheearthgotitsbeautyrealprice"> <strike>199</strike></string>
    <string name="howtheearthgotitsbeautydeductprice">183</string>
    <string name="thinkstraightheading">Think Straight\n</string>
    <string name="dariusforoux">Darius Foroux</string>
    <string name="thinkstraightrealprice"> <strike>199</strike></string>
    <string name="thinkstraightdeductprice">157</string>
    <string name="twelfthfailheading">Twelfth Fail</string>
    <string name="dariusforouxwriter">Anurag Pathak,G...</string>
    <string name="twelfthfailrealprice"> <strike>199</strike></string>
    <string name="twelfthfaildeductprice">189</string>
    <string name="lakmenailpaintheading">Lakme Nail Paint\nRemover</string>
    <string name="quantitylakme">27 ml</string>
    <string name="lakmenailpaintrealprice"> <strike>199</strike></string>
    <string name="lakmeeyeconiccurlingheading">Lakme Eyeconic\nCurling Mascara...</string>
    <string name="lakmeeyeconicquantity">9 ml</string>
    <string name="lakmeeyeconicrealprice">250</string>
    <string name="lakmeeyeconicdeductprice">192</string>
    <string name="tulipcottonheading">Tulip Cotton\nPads</string>
    <string name="tulipcottonquantity">1 pack (100 pieces)</string>
    <string name="tulipcottonrealprice"> <strike>250</strike></string>
    <string name="tulipcottondeductedprice">192</string>
    <string name="maybellineheading">Maybelline New\nYork Colossal k...</string>
    <string name="maybellinequantity">0.35 g</string>
    <string name="maybellinerealprice"> <strike>250</strike></string>
    <string name="maybellinedeductedprice">192</string>
    <string name="Electronics">Electronics</string>
    <string name="homeappliances">Home Appliances</string>
    <string name="Audiosmart">Audio &amp; Smart</string>
    <string name="personal">Personal</string>
    <string name="Chargingcableandacces">Charging Cables &amp; accessories</string>
    <string name="Computeraccesories">Computer &amp; Accessories</string>
    <string name="decorativelights">Decorative &amp; Lights</string>
    <string name="wonderchefnutriheading">Wonderchef\nNutri-Cup Porta...</string>
    <string name="wonderchefquantity">1 unit</string>
    <string name="wonderchefrealprice"> <strike>2500</strike></string>
    <string name="wonderchefdeductedprice">1399</string>
    <string name="vega3in1hairheading">Vega 3-In-1 Hair\nStyler (VHSCC-01)</string>
    <string name="vega3in1hairquantity">1 unit</string>
    <string name="vega3in1hairrealprice"> <strike>1999</strike></string>
    <string name="vega3in1hairdeductedprice">1299</string>
    <string name="havellesbrushhairstraightnerheading">Havells Brush\nHair Straightne..</string>
    <string name="havellesbrushhairstraightnerquantity">1 unit</string>
    <string name="havellesbrushhairstraightnerrealprice"> <strike>3695</strike></string>
    <string name="havellesbrushhairstraightnerdeductedprice">2399</string>
    <string name="nurepublicpartyheading">Nu Republic Party\nBox 16 Bluetoot...</string>
    <string name="nurepublicpartyquantity">1 unit</string>
    <string name="nurepublicpartyrealprice"> <strike>3999</strike></string>
    <string name="nurepublicpartydeductedprice">949</string>
    <string name="giftingstore">Gifting Store</string>
    <string name="findtheperfectgift">Finf the perfect gift, every time!</string>
    <string name="homeandliving">Home &amp; Living</string>
    <string name="jwelleryandaccessories">Jewellery &amp; Accessories</string>
    <string name="toysandgamess">Toys &amp; Games</string>
    <string name="books">Books</string>
    <string name="flowersandplants">Flowers &amp; Plants</string>
    <string name="bellavitaorganicluxuryheading">Bella Vita Organic\nLuxury Perfume...</string>
    <string name="bellavitaorganicluxuryquantity">1 set (4 * 20 ml)</string>
    <string name="bellavitaorganicluxuryrealprice"> <strike>849</strike></string>
    <string name="bellavitaorganicluxurydeductedprice">565</string>
    <string name="pigeonhotkettleheading">Pigeon Hot\nElectric Kettle(1..</string>
    <string name="pigeonhotkettlequantity">1 unit</string>
    <string name="pigeonhotkettlerealprice"> <strike>1245</strike></string>
    <string name="pigeonhotkettledeductedprice">549</string>
    <string name="orientelectricfabristyleheading">Orient Electric\nfabristyle Dry Ir...</string>
    <string name="orientelectricfabristylequantity">1 unit</string>
    <string name="orientelectricfabristylerealprice"> <strike>1140</strike></string>
    <string name="orientelectricfabristyledeductedprice">499</string>
    <string name="prestigeelectrickettleheading">Prestige Electric\nKettle (Silver, 15...</string>
    <string name="prestigeelectrickettlequantity">1 unit</string>
    <string name="prestigeelectrickettlerealprice"> <strike>1445</strike></string>
    <string name="selectdeliverylocation">Select delivery location</string>
    <string name="plus">+</string>
    <string name="addnewaddress">Add new address</string>
    <string name="getyoursavedaddressesinasingleclick">Get you saved addresses in a single\nclick</string>
    <string name="importaddressfromzomato">Import address from Zomato</string>
    <string name="Import">Import</string>
</resources>