<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/theme"
    android:layout_height="match_parent"
    tools:context=".signupActivity">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/user"
        android:layout_marginTop="110dp"
        android:layout_marginStart="120dp"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/name"
        android:textColorHint="@color/black"
        android:background="@drawable/edittextstyle"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:paddingStart="40dp"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        android:background="@drawable/edittextstyle"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:paddingStart="40dp"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/userpassword"
        android:textColorHint="@color/black"
        android:background="@drawable/edittextstyle"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:paddingStart="40dp"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/phoneno"
        android:textColorHint="@color/black"
        android:background="@drawable/edittextstyle"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:paddingStart="40dp"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/Address"
        android:textColorHint="@color/black"
        android:background="@drawable/edittextstyle"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:paddingStart="40dp"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/pincode"
        android:textColorHint="@color/black"
        android:background="@drawable/edittextstyle"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:paddingStart="40dp"
        />
    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/signup"
        android:background="@drawable/buttonstyle"
        android:layout_marginStart="85dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/haveanaccount"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="Have An account?"

        android:layout_marginStart="270dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/blue"
        android:gravity="center"
        android:textStyle="bold"/>


</LinearLayout>