<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddressActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectdeliverylocation"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_margin="15dp"
        android:textStyle="bold"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/lightgreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/addnewaddress"
            android:textColor="@color/lightgreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addnewaddress"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/addressgreybg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginVertical="25dp"
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/zomato"
           />
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/importaddressfromzomato"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getyoursavedaddressesinasingleclick"
                android:textSize="11sp"
                android:textColor="@color/gray"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Import"
            android:textColor="@color/lightgreen"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:gravity="end"/>

    </LinearLayout>


</LinearLayout>